package model;

public class ClientDirect {
	private String nom;
	private String gsm;
	private String email;

	public ClientDirect(String nom, String gsm, String email) {
		this.nom = nom;
		this.gsm = gsm;
		this.email = email;
	}
}