package model;

public class ClientFinal extends Partenaire {
	private String nomPrenom;

	public ClientFinal(String nomPrenom) {
		super(nomPrenom);
	}
	
}
