package model;

public class Partenaire {
	private String nom;
	
	public Partenaire(String nom) {
		this.nom = nom;
	}

	public String getNom() {
		return nom;
	}
}
